fix(backend): CommentService 빈 리스트 생성 방식 개선
- List.of()를 Collections.emptyList()로 변경하여 호환성 개선

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>